--- a/public/style.css
+++ b/public/style.css
@@ -1,104 +1,714 @@
-html, body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: 'Nunito', sans-serif;
-    font-size: 2.5vw;
-    background-color: whitesmoke;
-    font-weight: bold;
-    gap: 2vh;
-    
+html, body{
+  font-family: 'Inter', sans-serif;
+  background: #827A63;
+  margin: 0%;
+  height: 95vh;
 }
-img {
-    width: 3vw;
-    height: 3vh;
-    
+
+
+h1{
+  color: white;
+  display: grid;
+ text-align: center;
+  font-size: 5vw;
 }
-.icon {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 20vw;
+
+p{
+  display: flex;
+  justify-content: start;
+  margin-right: auto;
+  margin-left: 25%;
+  margin-top: 7%;
+  font-size: 5vw;
+  color: white;
 }
-.title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.Back{
+  width: 30vw;
+  height: 5vw;
+  background-color: #FFC700;
+  color: black;
+  font-size: 2.5vw;
+  border: none;
+  border-radius: 3vw;
+  cursor:pointer;
+  margin: 1vw;
+  margin-left: 33%;
+  margin-top: 5%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
 }
-.allcontents, .light-door{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(220, 219, 219);
-    box-shadow: 2px 2px 8px 1px rgba(0,0,0,0.3);
-    width: 35vw;
-    height: 40vh;
-    border-radius: 2vw;
-    gap: 3vw;
+
+
+
+ /* profile page */
+ 
+ 
+ .profile-container{
+  display:grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  padding-left: 1%; 
+ 
+  column-gap: 2dvh;
+
+  border: .1rem solid;
+  border-color: #000;
+  border-radius:15px ;
+  
+  background-color: #f0e9e9;
+  text-align: left;
+  justify-items:left;
+  align-items: center;
+ 
+ }
+
+
+ .profile_img{
+  border-radius:15px;
+ margin: 2%;
+
+ }
+
+ #full-name{
+ color: #000;
+ font-style:initial
+
+ 
+}
+h4{
+  color:#827A63 ;
+}
+
+.update-btn {
+  background-color: #FFC700;
+  font-weight: bold;
+  border-radius: 15dvb;
+  border: none;
+  padding: 2dvh 6dvh;
+  margin-top: 3dvh;
+  
+ 
+  width: 98%;
+}
+
+#update-res-btn{
+  font-weight: bold;
+  background-color: #FFC700;
+  border-radius: 15dvb;
+  border: none;
+  padding: 2dvh 6dvh;
+  margin-bottom: 1dvb;
+  margin-top: 2dvb;
+  
+}
+
+#update-profile {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* column-gap: 4dvw; */
+
+}
+ 
+
+
+.change-info {
+
+  background-color: #f0e9e9;
+  border-radius:15px;
+  border: .1rem solid;
+  border-color: #000;
+  padding: 3%;
+ 
+}
+
+input{
+  
+  border-radius: 15px;
+  padding: 1%;
+  width: 97% ;
+}
+
+
+#form-1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1dvh;
+}
+
+#form-2{
+  display: grid;
+  grid-column: span2;
+
+  
+}
+
+#form-3{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1%;
+  
+}
+
+#form-4{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1%;
+  
+}
+
+#form-5{
+  display: grid;
+  grid-column: span2;
+  
+}
+
+
+ #profile-image{
+ 
+padding-top: 2dvb;
+ grid-column: 1;
+ grid-row: 1;
+  
+ }
+ .profile_img{
+  width: 50dvb;
+  height: auto;
+ }
+
+
+ .yellow-container{
+  margin:3dvb;
+  background-color:#FFC700;
+  padding: 5dvh;
+  border-radius: 15px;
+ }
+
+ 
+/* carlos css */
+
+
+.top-bar{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-right: 0vw;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+  
+}
+
+.top-bar button{
+  margin-top: -1vw;
+  /* margin-bottom: -1vw; */
+  background-color: #827A63;
+  border: none;
+
+
+}
+.garden-loft img{
+  display: flex;
+  justify-content: flex-start;
+  width: 10vw;
+  height: 5vw;
+  background-color: #827A63;
+  
+}
+
+.rigth-top-bar{
+  margin-left: 45vw;
+  
+}
+.Home img{
+  position: relative;
+  width: 9vw;
+  height: 6vw;
+  margin-top: 1.5vw;
+  margin-bottom: 0vw;
+}
+
+.Profile img{
+  width: 9vw;
+  height: 6vw;
+}
+
+.loft img{
+  width: 9vw;
+  height: 6vw;
+
+} 
+
+
+.Help img{
+  width: 9vw;
+  height: 6vw;
+} 
+
+
+
+
+/* Welcome page */
+
+#start {
+  width: 15vw;
+  height: 5vw;
+  background-color: #FFC700;
+  color: black;
+  font-size: 2.5vw;
+  border: none;
+  border-radius: 3vw;
+  cursor:pointer;
+  margin: 1vw;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+
+}
+
+
+.rigth-top-bar button:hover {
+  background-color: rgba(255, 200, 0, 0.8);
+ 
+}
+
+
+#logo{
+  display: flex;
+  justify-content: center;
+  width: 37vw;
+  padding-bottom: 1vw;
+
+ 
+}
+
+.animation{
+  height: 20vw;
+
+}
+
+#welcome {
+  height: 98vh;
+  width: auto;
+  display: grid;
+ text-align: center;
+  justify-items: center;
+  align-items:center;
+  background: linear-gradient(to bottom #827A63,#655730 );
+}
+
+
+#welcome h1 {
+  padding: 0%;
+  margin: 0;
+  /* font-family: Lily Script One;
+   */
+}
+
+#welcome h2 {
+  padding: 0%;
+  margin: 0;
+  color:white;
+  /* font-family: Lily Script One; */
+  
+}
+/* text animation */
+
+/* welcome  */
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-expand 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+@-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/* garden-loft logo animation */
+
+.scale-in-center {
+	-webkit-animation: scale-in-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: scale-in-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+ @-webkit-keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
+/* hello Martha animation */
+
+.tracking-in-contract-bck-top {
+	-webkit-animation: tracking-in-contract-bck-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract-bck-top 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+
+ @-webkit-keyframes tracking-in-contract-bck-top {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(-300px);
+            transform: translateZ(400px) translateY(-300px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract-bck-top {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(-300px);
+            transform: translateZ(400px) translateY(-300px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+
+/* resident profile page */
+
+
+.check-info{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3%;
    
 }
-.thermostat {
-    display: flex;
-    flex-direction: row;
-    
-}
-.currentTemp {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px dotted black;
-    padding-bottom: 1vw;
+
+#check-info-container{
+  background-color: #f0e9e9;
+  border-radius:15px;
+  border: .1rem solid;
+  border-color: #f8efef;
+  padding: 3%;
+  margin: 2%;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+ 
 }
 
-.tempReading {
-    color: blue;
-    font-family: 'Nunito', sans-serif;
-    
-}
-button {
-    width: 6vw;
-    height: 8vh;
-    font-size: 3vw;
-    border: 0px;
-    border-radius: 1vw;
-    z-index: 1;
-    color: rgb(65, 64, 64);
-    box-shadow: 2px 2px 8px 1px rgba(0,0,0,0.3);
-    cursor: pointer;
-    transition: transform 0.1s ease-in-out;
-}
-button:hover {
-    background-color: beige;
-}
-button:active{
-    transform: translateY(2px) scale(0.95);
-}
-.tempDegree{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 8vw;
+#part-2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
 
 }
-.light-door {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 25vh;
-    gap: 4vh;
+
+#res_profile_img{
+  background-color: #827A63;
+ border-radius: 15%;
+
+
 }
-.lightDoor{
-    width: 10vw;
-    font-size: 2vw;
+
+#resident-profile{
+  margin: 2%;
+ border-color: beige;
+ box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
 }
-.light-door-bttn {
-    display: flex;
-    flex-direction: row;
-    gap: 2vw;
+
+#hobbies{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap:3%;
+
 }
+
+.check-info label{
+  font-size: smaller;
+  color: #827A63;
+}
+
+.check-info h5{
+border: solid #827A63;
+border-radius: 10rem;
+border-width:.2dvh;
+padding: 1dvh;
+ 
+  
+}
+
+
+/* /carlos nav-bar */
+
+.resident-top-bar{
+  align-items: center;
+  width: 100%;
+  margin-right: 0vw;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+
+  
+}
+
+.resident-top-bar button{
+  margin-top: .5vw;
+  margin-bottom: .5vw;
+  background-color:#827A63;
+  border: none;
+ 
+}
+.R-garden-loft img{
+  display: flex;
+  justify-content: flex-start;
+  width: 9vw;
+  height: 8vw;
+  background-image: none;
+
+}
+.R-garden-loft img:hover{
+  background-color: #5F5A49;
+  border-radius: 20px;
+}
+
+.R-Controls img{
+  position: relative;
+  width: 9vw;
+  height: 8vw;
+  border: solid .1vw white;
+  border-radius: 22px;
+}
+.R-Controls img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+
+.R-watch-tv img{
+  width: 9vw;
+  height: 8vw;
+  border: solid .1vw white;
+  border-radius: 22px;
+}
+.R-watch-tv img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+
+.R-schedule img{
+  width: 9vw;
+  height: 8vw;
+  border: solid .1vw white;
+  border-radius: 22px;
+}
+.R-schedule img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+
+.R-contacts img{
+  width: 9vw;
+  height: 8vw;
+  border: solid .1vw white;
+  border-radius: 22px;
+}
+
+.R-contacts img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+.R-support-button img{
+  width: 9vw;
+  height: 8vw;
+  border: solid .1vw white;
+  border-radius: 22px;
+  margin-left: 12vw;
+}
+
+.R-support-button img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+.R-picture-button img{
+  width: 9vw;
+  height: 7.5vw;
+  border-radius: 22px;
+  margin-left: 12vw;
+}
+
+.R-picture-button img:hover{
+  background-color: #5F5A49;
+  border-radius: 22px;
+}
+  
+
+
+
+
+
+
+
+/* temperature control page */
+
+#go-back{
+ 
+  color: #000;
+  background-color: #FFC700;
+  border-radius: 25px;
+  height: 15dvb;
+
+  box-shadow: inset 0px 0px 20px -10px;
+  
+ }
+ .back-arrow{
+  height: inherit;
+ }
+
+ .go-back{
+  display: block;
+  text-align: center;
+ margin: 2%;
+ }
+ .main-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10vw;
+ }
+#circle{
+display: flex;
+justify-content: center;
+ height: 14dvh;
+ width: auto;
+ margin:5%;
+ 
+
+}
+
+#main-container1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#temp-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+    
+}
+
+#circle-temp{
+width: 3vw;
+margin-top: 1vh;
+}
+.circle-temp{
+  margin-top: 3vh;
+  }
+
+
+.circleimg{
+  position: relative;
+ 
+}
+
+
+
+#Current-temperature{
+  position: absolute;
+  margin-top: 29vh;
+  font-size: 2vw;
+  font-weight: bold;
+  color: blue;
+  
+}
+
+output{
+  border: none;
+  box-shadow: inset 0px 0px 20px -10px;
+  margin: 2%;
+  font-size: 8vw;
+  font-weight: bold;
+  height: 15dvb;
+}
+
+.temperature{
+  display: flex;
+  align-items: center;
+  border: none;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #fff;
+  box-shadow: inset 0px 0px 20px -10px;
+  margin: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-size: 2.5vw;
+  font-weight: bold;
+  height: 10dvb;
+}
+
+
+
+.increase-btn, .decrease-btn{
+ display: flex;
+ align-items: center;
+  color: #000;
+  background-color: #FFC700;
+  border-radius: 25px;
+  height: 10dvb;
+
+  margin: 0%;
+  box-shadow: inset 0px 0px 20px -10px;
+   
+ }
+
+ #plus, #minus{
+padding: 10px;
+width: 3vw;
+ }
+
+
+
+ 
